<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"

    >

    <ImageView
        android:id="@+id/picture"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/defaultlogo"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtNameOfTheWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/picture"
        android:padding="10dp"
        android:text="@string/name_of_the_word"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPronoucing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNameOfTheWord"
        android:layout_toEndOf="@+id/picture"
        android:padding="10dp"
        android:text="@string/pronunciation"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtListRating"
        android:layout_width="78dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/defaultRating"
        android:textStyle="bold"
        android:textSize="20sp" />

</RelativeLayout>